fixtures/cs-rng-02/good/random-bytes-32-key.ts
import { randomBytes } from "crypto";
export function generateSecretKey() {
	return randomBytes(32);
}
