fixtures/cs-rng-02/bad/random-bytes-1-otp.ts
import { randomBytes } from "crypto";
export function generateOtpCode() {
	return randomBytes(1).toString("hex");
}
